--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "swiper/css";
+@import "swiper/css/navigation";
+@import "swiper/css/pagination";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+  --background: #FFFFFF;
+  --foreground: #222222;
+} 
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+.swiper-pagination {
+  margin-top: 25px; /* Move dots lower */
+  position: relative !important;
+}
+
+.swiper-pagination-bullet {
+  background: #6B7177 !important; /* Inactive dot color */
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  background: #1F4B3F !important; /* Active dot color */
 }
